--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><head><title>5k Mission</title></head><body><h1>Welcome to 5k Mission!</h1><p>This is the official site.</p></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SoulVault NFT Collection</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Welcome to <span>SoulVault NFT Collection</span></h1>
+  </header>
+  <section class="nft-section">
+    <div class="nft-card">
+      <img src="nft-sample.png" alt="NFT Example">
+      <h2>Featured NFT</h2>
+      <p>Discover our exclusive NFT collection now available for purchase.</p>
+      <button>Connect Wallet</button>
+    </div>
+  </section>
+</body>
+</html>
