--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <section class="nft-section">
     <div class="nft-card">
-      <img src="nft.png" alt="Featured NFT" style="width:300px; border-radius:15px; box-shadow:0 0 20px #ff00ff;">
+      <img src="nft.png" alt="NFT Example" width="300">
       <h2>Featured NFT</h2>
       <p>Discover our exclusive NFT collection now available for purchase.</p>
       <button onclick="connectWallet()">Connect Wallet</button>
